platform/kubernetes/base/kyverno/disallow-latest-tag-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-image-tag
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Using a mutable image tag (':latest' or no tag) is not allowed."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
